--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,16 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -24,15 +14,35 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.ride-details {
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ride-image {
+  display: block;
+  margin: 0 auto;
+  width: 70%;
+  height: auto;
+}
+
+.current-wait {
+
+}
+
+.average-wait {
+
+}
+
+.min-height {
+
+}
+
+.ride-type {
+
+}
+
+.ride-description {
+
 }
