--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,18 +15,41 @@
 }
 
 .ride-details {
-  display: flex;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
   justify-content: center;
   text-align: center;
+  background-color: whitesmoke;
+}
+
+.ride-header {
+  text-align: center;
+  background-color: #a60303;
+  color: whitesmoke;
+}
+
+.details {
+  border: 2px solid gray;
+}
+
+.corner {
+  background-color: #a60303;
 }
 
 .ride-image {
+  padding-top: 10px;
   display: block;
   margin: 0 auto;
   width: 70%;
   height: auto;
 }
-/* 
+
+.ride-reviews {
+  text-align: center;
+  border: 2px solid gray;
+  background-color: white;
+}
+
 .current-wait {
 
 }
@@ -43,6 +66,23 @@
 
 }
 
+.write-container {
+  height:20vh;
+  border: 1px solid gray;
+}
+
 .ride-description {
- */
+  text-align: left;
+  padding: 0px 20px 0px 20px;
+}
+
+.submit-button {
+  display: block;
+  margin: 0 auto;
+}
+
+input {
+  margin: 5px 0px 5px 0px;
+}
+
 
