--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,6 @@ body {
 }
 
 .ride-name {
-  background-color: #a60303;
   border-radius: 7px;
   display: inline-block;
   padding: 10px;
@@ -57,52 +56,60 @@ body {
   grid-template-columns: 3fr 1fr;
   justify-content: center;
   text-align: center;
-  background-color: whitesmoke;
+  background-color: rgba(45,45,45,0.5);
 }
 
 .ride-header {
   text-align: center;
-  background-color: #a60303;
   color: whitesmoke;
 }
 
 .details {
-  border: 2px solid gray;
+  border: 2px solid black;
+  background-color: rgba(0,0,0,0.8);
+  color: whitesmoke;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-.corner {
-  background-color: #a60303;
-}
 
 .ride-image {
   padding-top: 10px;
   display: block;
   margin: 0 auto;
-  width: 70%;
+  width: 95%;
   height: auto;
 }
 
 .ride-reviews {
   text-align: center;
-  border: 2px solid gray;
-  background-color: white;
+  background-color: rgba(45,45,45,0.5);
+  color: whitesmoke;
+  border: 2px solid black;
 }
 
-.write-container {
-  height:20vh;
-  border: 1px solid gray;
-}
 
 .ride-description {
   text-align: left;
   padding: 0px 20px 0px 20px;
 }
 
+.rev {
+  text-align: left;
+  padding-left: 10px;
+
+}
+
 .submit-button {
   display: block;
   margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 input {
   margin: 5px 0px 5px 0px;
+  display: inline-block;
+  width: 90%;
+  color: whitesmoke;
 }
